--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column">
+<div fxLayout="column" fxLayoutGap="20px">
   <div class="item">hello column 1</div>
 
   <div fxLayout="row " fxLayoutGap="20px">
